{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 104,
  "lineage": "666c5b0a-1c20-dd8b-5b4a-d578f0369936",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbffeaeab69af4fe",
            "arn": "arn:aws:ec2:ap-south-1:512584596315:elastic-ip/eipalloc-0bbffeaeab69af4fe",
            "association_id": "eipassoc-091a32ba91985c092",
            "domain": "vpc",
            "id": "eipalloc-0bbffeaeab69af4fe",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-04c861dd47fa1244c",
            "private_dns": "ip-10-0-3-206.ap-south-1.compute.internal",
            "private_ip": "10.0.3.206",
            "public_dns": "ec2-65-0-154-237.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.154.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:internet-gateway/igw-090ee7f896e27d007",
            "id": "igw-090ee7f896e27d007",
            "owner_id": "512584596315",
            "tags": {
              "Environment": "dev",
              "Name": "fintech-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-igw-dev"
            },
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbffeaeab69af4fe",
            "association_id": "eipassoc-091a32ba91985c092",
            "connectivity_type": "public",
            "id": "nat-0ab041133175cd24d",
            "network_interface_id": "eni-04c861dd47fa1244c",
            "private_ip": "10.0.3.206",
            "public_ip": "65.0.154.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0826d85ed8d36c5d9",
            "tags": {
              "Environment": "dev",
              "Name": "fintech-nat-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-nat-dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:route-table/rtb-050139641196b1bc0",
            "id": "rtb-050139641196b1bc0",
            "owner_id": "512584596315",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab041133175cd24d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fintech-private-rt-dev"
            },
            "tags_all": {
              "Name": "fintech-private-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:route-table/rtb-083edc76c6f319491",
            "id": "rtb-083edc76c6f319491",
            "owner_id": "512584596315",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090ee7f896e27d007",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fintech-public-rt-dev"
            },
            "tags_all": {
              "Name": "fintech-public-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d360bdffd872312",
            "route_table_id": "rtb-050139641196b1bc0",
            "subnet_id": "subnet-0853c6d72349f710d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3e9f1a04255af94",
            "route_table_id": "rtb-050139641196b1bc0",
            "subnet_id": "subnet-01eb8144485e9d3f8"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0198f29cd7af00ea0",
            "route_table_id": "rtb-083edc76c6f319491",
            "subnet_id": "subnet-0826d85ed8d36c5d9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "glue_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:security-group/sg-0312c0b40e4c1cab4",
            "description": "Security group for Glue jobs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0312c0b40e4c1cab4",
            "ingress": [],
            "name": "fintech-glue-sg-dev",
            "name_prefix": "",
            "owner_id": "512584596315",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fintech-glue-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-glue-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:security-group/sg-058fd3632a65232df",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058fd3632a65232df",
            "ingress": [],
            "name": "fintech-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "512584596315",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fintech-lambda-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-lambda-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:security-group/sg-02189369c30ed052c",
            "description": "Security group for MSK Kafka",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02189369c30ed052c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Lambda and Glue to connect to Kafka",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0312c0b40e4c1cab4",
                  "sg-058fd3632a65232df"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "fintech-msk-sg-dev",
            "name_prefix": "",
            "owner_id": "512584596315",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fintech-msk-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-msk-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.glue_sg",
            "module.vpc.aws_security_group.lambda_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:security-group/sg-0e2754e255fc0b0ae",
            "description": "Security group for Redis ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2754e255fc0b0ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Lambda to connect to Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058fd3632a65232df"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fintech-redis-sg-dev",
            "name_prefix": "",
            "owner_id": "512584596315",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fintech-redis-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-redis-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.lambda_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:subnet/subnet-0853c6d72349f710d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0853c6d72349f710d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "512584596315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "fintech-private-1-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-private-1-dev"
            },
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:subnet/subnet-01eb8144485e9d3f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb8144485e9d3f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "512584596315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "fintech-private-2-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-private-2-dev"
            },
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:subnet/subnet-0826d85ed8d36c5d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0826d85ed8d36c5d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512584596315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "fintech-public-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-public-dev"
            },
            "vpc_id": "vpc-0abda4d959be7eabf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:512584596315:vpc/vpc-0abda4d959be7eabf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c486832bf4471fd",
            "default_route_table_id": "rtb-0083278d4e007dfa8",
            "default_security_group_id": "sg-0765d250a3a89972f",
            "dhcp_options_id": "dopt-069ba51adfb563282",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abda4d959be7eabf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0083278d4e007dfa8",
            "owner_id": "512584596315",
            "tags": {
              "Environment": "dev",
              "Name": "fintech-vpc-dev",
              "Project": "fintech"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fintech-vpc-dev",
              "Project": "fintech"
            }
          }
        }
      ]
    }
  ]
}